# WaterBottleModel

./: .gitignore  CMakeLists.txt  README.md  main.h  model.cc  model.h  parameters.cc  parameters.h
examples/: overburden.txt  waterbottlemodel.prm
singularity/: README.md  dealii.def  exec.sh  ompi.def  utils.def  wbm.def
src/: CMakeLists.txt  ascii_utils.cc  ascii_utils.h  field_initializer.cc  field_initializer.h  main.cc  main.h  model.cc  model.h  parameters.cc  parameters.h  postprocess_vis.cc  postprocess_vis.h
